--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -104,13 +104,12 @@
       }
 
       .details-link {
-        // color: #384D5C;
+        color: #384D5C;
         padding: 0.5em;
         position: absolute;
         bottom: 0;
-        // left: 0;
         cursor: pointer;
-        // background-color: #A3AAAB;
+        background-color: #A3AAAB;
       }
 
       .details-link:hover {
