--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -124,13 +124,18 @@
 
  .title {
     color: $off-white;
-    font-size: rem-calc(25px);
+    font-size: rem-calc(28px);
     font-weight: $bold;
     text-transform: uppercase;
   }
 
   .content {
     color: $off-white;
+  }
+
+  .tile-tweet {
+    color: $off-white;
+    font-size: rem-calc(20px);
   }
 
   .rating {
