--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -53,8 +53,8 @@
         </div>
         
         <div class="col-md-4">
-          <h1><i class="fa fa-credit-card"></i> / <i class="fa fa-cc-paypal"></i></h1>
-          <h4>Accepting cards &amp; Paypal soon.</h4>
+          <h1><i class="fa fa-credit-card"></i> / <i class="fa fa-cc-stripe"></i></h1>
+          <h4>Accepting cards &amp; stripe soon.</h4>
           
 <!--           <div class="paypal-button">
             <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
