--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -168,9 +168,27 @@ b, strong {
   background-image: image-url("noise.png");
   }
 
-::-webkit-scrollbar { 
-    display: none; 
-}
+// ::-webkit-scrollbar-track
+// {
+//   -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.3);
+//   border-radius: 8px;
+//   background-image: image-url("lighter-noise.png")
+// }
+
+// ::-webkit-scrollbar
+// {
+//   width: 10px;
+//   background-image: image-url("lighter-noise.png")
+// }
+
+// ::-webkit-scrollbar-thumb
+// {
+//     background-color: $light-grey;
+//     border: 3px solid transparent;
+//     border-radius: 9px;
+//     background-clip: content-box;
+// }
+
 
 .live {
   color: $accent-yellow;
