--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
 <% else %>
 
   <h1><i class="fa fa-user"></i> create <strong>Account</strong></h1>
-  <h3>Go ahead and <strong>start mapping</strong> for free. Seriously.</h3>
+  <h3>Go ahead and <strong>start connecting</strong> for free. Seriously.</h3>
 
 <% end %>
 
@@ -42,6 +42,12 @@
 <% if current_user %>
       <div class="row">
 
+        <!-- Ankur, display the plan name here. -->
+        <div class="col-md-4">
+          <h1><%= @user.plan %></h1>
+          <h4>Current Plan</h4>
+        </div>
+
         <div class="col-md-4">
           <h1><%= @user.credits %></h1>
           <h4>Maps</h4>
@@ -50,11 +56,6 @@
         <div class="col-md-4">
           <h1><%= @user.mappings.enabled.count %></h1>
           <h4>Enabled maps</h4>
-        </div>
-
-        <div class="col-md-4">
-          <h1><i class="fa fa-credit-card"></i> / <i class="fa fa-cc-stripe"></i></h1>
-          <h4>Accepting cards &amp; stripe soon.</h4>
           
 <!--           <div class="paypal-button">
             <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
@@ -98,7 +99,7 @@
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <%= form_for @user, role: 'form' do |f| %>
-                  Settings
+                  User and Organization Settings
                 </a>
               </h4>
             </div>
@@ -132,7 +133,27 @@
                     <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.organization.plan.try(:name)%>
                   </div>
                   <div class="form-group">
-                    <div class="btn-group">
+                    <%= f.label 'Plan' %><br>
+                    <!-- Ankur, please use this format, and don't ask for credit card information until "Sign up" is clicked. -->
+                    <div class="btn-group" data-toggle="buttons">
+                      <label class="btn btn-default active">
+                        <input type="radio" href="javascript:;" class="payButton" data-amount="free" checked> Free
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" href="javascript:;" class="payButton" data-amount="3900"> Entry $39/mo.
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="options" id="option3" autocomplete="off"> Startup $79/mo.
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="options" id="option3" autocomplete="off"> Growth $249/mo.
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="options" id="option3" autocomplete="off"> Enterprise $999/mo.
+                      </label>
+                    </div>
+
+                    <!-- <div class="btn-group">
                       <a class="btn btn-success dropdown-toggle plan_dropdwn" data-toggle="dropdown" href="#">
                         Select: Plan
                         <span class="caret"></span>
@@ -144,8 +165,10 @@
                         <li><a href="javascript:;" class="payButton" data-amount="29900">Growth</a></li>
                         <li><a href="javascript:;" class="payButton" data-amount="99900">Enterprise</a></li>
                       </ul>
-                    </div>
+                    </div> -->
+                  
                   </div>
+
                   <% if current_user %>
                     <%= f.submit "Update", class: 'btn btn-primary' %>
                   <% else %>
