--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -44,7 +44,7 @@
 
         <!-- Ankur, display the plan name here. -->
         <div class="col-md-4">
-          <h1><%= @user.plan %></h1>
+          <h1><%= @user.organization.plan.try(:name) %></h1>
           <h4>Current Plan</h4>
         </div>
 
@@ -56,7 +56,7 @@
         <div class="col-md-4">
           <h1><%= @user.mappings.enabled.count %></h1>
           <h4>Enabled maps</h4>
-          
+
 <!--           <div class="paypal-button">
             <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick">
@@ -98,7 +98,7 @@
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  <%= form_for @user, role: 'form' do |f| %>
+                  <%= form_for @user, role: 'form', html: {id: 'signup_form'} do |f| %>
                   User and Organization Settings
                 </a>
               </h4>
@@ -126,53 +126,41 @@
                     <%= f.label :last_name %>
                     <%= f.text_field :last_name, class: 'form-control' %>
                   </div>
-                  <div class="form-group">
-                    <%= f.label 'Organisation' %>
-                    <%= text_field_tag :organization_name, @user.organization.try(:name), class: 'form-control' %>
-                    <%=f.hidden_field :stripe_token %>
-                    <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.organization.plan.try(:name)%>
-                  </div>
-                  <div class="form-group">
-                    <%= f.label 'Plan' %><br>
-                    <!-- Ankur, please use this format, and don't ask for credit card information until "Sign up" is clicked. -->
-                    <div class="btn-group" data-toggle="buttons">
-                      <label class="btn btn-default active">
-                        <input type="radio" href="javascript:;" class="payButton" data-amount="free" checked> Free
-                      </label>
-                      <label class="btn btn-default">
-                        <input type="radio" href="javascript:;" class="payButton" data-amount="3900"> Entry $39/mo.
-                      </label>
-                      <label class="btn btn-default">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Startup $79/mo.
-                      </label>
-                      <label class="btn btn-default">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Growth $249/mo.
-                      </label>
-                      <label class="btn btn-default">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Enterprise $999/mo.
-                      </label>
+                  <%if current_user && current_user.role == 'client_admin'%>
+                    <div class="form-group">
+                      <%= f.label 'Organisation' %>
+                      <%= text_field_tag :organization_name, @user.organization.try(:name), class: 'form-control' %>
+                      <%=f.hidden_field :stripe_token %>
+                      <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.organization.plan.try(:name)%>
                     </div>
-
-                    <!-- <div class="btn-group">
-                      <a class="btn btn-success dropdown-toggle plan_dropdwn" data-toggle="dropdown" href="#">
-                        Select: Plan
-                        <span class="caret"></span>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a href="javascript:;" class="payButton" data-amount="free">Free</a></li>
-                        <li><a href="javascript:;" class="payButton" data-amount="3900">Entry</a></li>
-                        <li><a href="javascript:;" class="payButton" data-amount="7900">Startup</a></li>
-                        <li><a href="javascript:;" class="payButton" data-amount="29900">Growth</a></li>
-                        <li><a href="javascript:;" class="payButton" data-amount="99900">Enterprise</a></li>
-                      </ul>
-                    </div> -->
-                  
-                  </div>
-
+                    <div class="form-group">
+                      <%= f.label 'Plan' %><br>
+                      <!-- Ankur, please use this format, and don't ask for credit card information until "Sign up" is clicked. -->
+                      <div class="btn-group plan_btn" data-toggle="buttons">
+                        <label class="btn btn-default active">
+                          <input type="radio" name="options" data-name="Free" data-amount="free" checked> Free
+                        </label>
+                        <label class="btn btn-default">
+                          <input type="radio" name="options" data-name="Entry" data-amount="3900"> Entry $39/mo.
+                        </label>
+                        <label class="btn btn-default">
+                          <input type="radio" name="options" data-name="Startup" data-amount="7900"> Startup $79/mo.
+                        </label>
+                        <label class="btn btn-default">
+                          <input type="radio" name="options" data-name="Growth" data-amount="24900"> Growth $249/mo.
+                        </label>
+                        <label class="btn btn-default">
+                          <input type="radio" name="options" data-name="Enterprise" data-amount="99900"> Enterprise $999/mo.
+                        </label>
+                      </div>
+                    </div>
+                  <%else%>
+                    <%= hidden_field_tag :organization_name, @user.organization.try(:name)%>
+                  <%end%>
                   <% if current_user %>
                     <%= f.submit "Update", class: 'btn btn-primary' %>
                   <% else %>
-                    <%= f.submit "Sign up", class: 'btn btn-success', id: 'submit_btn', disabled: true %>
+                    <%= f.submit "Sign up", class: 'btn btn-success', id: 'submit_btn' %>
                   <% end %>
                   <script src="https://checkout.stripe.com/checkout.js"></script>
               <% end %>
@@ -296,7 +284,13 @@
 <script>
   <%if current_user%>
     plan = '<%=current_user.organization.plan.try(:name)%>'
-    $(".plan_dropdwn").html(plan+'<span class="caret"></span>');
+    $('.plan_btn label').removeClass('active');
+    $('.plan_btn input').each(function(){
+      if ($(this).data('name') == plan){
+        $(this).attr('checked');
+        $(this).parent('label').addClass('active');
+      }
+    })
   <%end%>
 
   var handler = StripeCheckout.configure({
@@ -304,30 +298,27 @@
     token: function(token) {
       console.log(token);
       $("#user_stripe_token").val(token.id);
-      $("#submit_btn").attr('disabled', false);
+      $("form#signup_form").submit();
     }
   });
 
-  $('.payButton').on('click', function(e) {
-    text = $(this).text();
-    // Open Checkout with further options
-    $(".plan_dropdwn").html($(this).text()+'<span class="caret"></span>');
-    $("#user_subscription_plan").val(text);
-    if(text != 'Free'){
-      $("#submit_btn").attr('disabled', true);
-      amount = $(this).data('amount');
-      handler.open({
-        name: 'OpenFn',
-        amount: amount
-      });
-    }else if(text == 'Free'){
-      $("#submit_btn").attr('disabled', false);
+  $("form#signup_form").submit(function(e){
+    amount = $('.plan_btn').find('input:checked').data('amount');
+    plan_name = $('.plan_btn').find('input:checked').data('name');
+    if($("#user_subscription_plan").val() != plan_name){
+      $("#user_subscription_plan").val(plan_name);
+      if(amount != 'free'){
+        if($("#user_stripe_token").val() == ""){
+          handler.open({
+            name: 'OpenFn',
+            amount: amount
+          });
+          return false;
+        }else{
+          return true;
+        }
+      }
     }
-    e.preventDefault();
   });
 
-  // Close Checkout on page navigation
-  $(window).on('popstate', function() {
-    handler.close();
-  });
 </script>
