cleaner modal for add product

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -223,6 +223,13 @@
   padding: 1em;
 }
 
+.add-modal {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 .fsField {
   color: $grey; 
+  width: 508px;
+
 }
