--- a/app/views/users/_organization_fields.html.erb
+++ b/app/views/users/_organization_fields.html.erb
@@ -8,7 +8,7 @@
   <%= f.label 'Plan' %><br>
   <div class="btn-group plan_btn" data-toggle="buttons">
     <label class="btn btn-default active">
-      <input type="radio" name="options" data-name="Free" data-amount="free"> Free
+      <input type="radio" name="options" data-name="Free" data-amount="free" checked> Free
     </label>
     <label class="btn btn-default">
       <input type="radio" name="options" data-name="Entry" data-amount="3900"> Entry $39/mo.
