set password page for invited users

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -211,7 +211,7 @@
 
 <script>
   <%if current_user%>
-    plan = '<%=current_user.organization.plan.try(:name)%>';
+    plan = '<%=current_user.organization.plan.try(:name) rescue ""%>';
     if (plan != "")
       SetPlan(plan);
   <%else%>
