--- a/app/views/users/set_password.html.erb
+++ b/app/views/users/set_password.html.erb
@@ -1,14 +1,48 @@
-<div class='row'>
-  <div class="col-md-offset-4 col-md-4 well text-center">
-    <h2>Set Your Password First</h2>
+<div class="ideas">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="row">
+        <br>
+        <h2 style="text-align: center;">Welcome to openfn.org</h2>
+        <br>
+      </div>
+      <div class="row">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title"> User Settings </h4>
+            </div>
+        
+            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+              <div class="panel-body">      
+
     <%= form_for :user, url: set_password_path(token: params[:token]), method: :post, role: 'form' do |f| %>
 
+      <!-- Add organization to display here -->
+
       <div class="form-group">
-        <%= f.password_field :password, class: 'form-control', placeholder: 'Password', autocomplete: 'off', required: true %>
+        <%= f.label :email %>
+        <%= f.text_field :email, class: 'form-control' %>
+      </div>      
+
+      <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control', autocomplete: 'off', required: true %>
       </div>
 
       <div class="form-group">
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm Password', autocomplete: 'off', required: true %>
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'off', required: true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, class: 'form-control' %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name, class: 'form-control' %>
       </div>
 
       <%= f.submit "Join", class: 'btn btn-primary' %>
