--- a/app/views/shared/_invite_modal.html.erb
+++ b/app/views/shared/_invite_modal.html.erb
@@ -7,6 +7,10 @@
           <h4 class="modal-title" id="myModalLabel">Invite Users</h4>
         </div>
         <div class="modal-body">
+          <%@errors = ["User has reached to the max limit"]%>
+          <ul id="errors">
+
+          </ul>
           <div class="error"></div>
           <div class="form-group">
             <%= label_tag :email %>
@@ -21,3 +25,8 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  $('#inviteModal').on('shown', function() {
+    alert('hi');
+  })
+</script>
