confirm popup after invitation

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -46,8 +46,14 @@
 
 }
 
-#inviteModal{
-  h4, label, div{
+#inviteModal, #confirmModal{
+  h2, h4, label, div{
     color:#333333;
+  }
+}
+
+#confirmModal{
+  .modal-content{
+    padding-left: 15px;
   }
 }
