--- a/app/views/shared/_invite_modal.html.erb
+++ b/app/views/shared/_invite_modal.html.erb
@@ -4,7 +4,7 @@
       <%=form_tag '/send_invite', method: :post, remote: true, role: 'form' do%>
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Invite Users</h4>
+          <h4 class="modal-title" id="myModalLabel">Invite User</h4>
         </div>
         <div class="modal-body">
           <div class="error"></div>
