--- a/app/assets/stylesheets/pricing.css.scss
+++ b/app/assets/stylesheets/pricing.css.scss
@@ -33,6 +33,9 @@ body {
   margin-bottom: 30px;
   border-top: 0;  
 }
+.flat .plan li.plan-name2 {
+  border-top: 0;  
+}
 
 .flat .plan li > strong {
   color: $deeper-blue;
