--- a/app/views/users/_organization_fields.html.erb
+++ b/app/views/users/_organization_fields.html.erb
@@ -21,10 +21,10 @@
       <input type="radio" name="options" data-name="Startup" data-amount="7900"> Startup $79/mo.
     </label>
     <label class="btn btn-default pay">
-      <input type="radio" name="options" data-name="Growth" data-amount="24900"> Growth $249/mo.
+      <input type="radio" name="options" data-name="Growth" data-amount="29900"> Growth $299/mo.
     </label>
-    <label class="btn btn-default pay">
-      <input type="radio" name="options" data-name="Enterprise" data-amount="99900"> Enterprise $999/mo.
+    <label class="btn btn-default pay disabled">
+      <input type="radio" name="options" data-name="Enterprise" data-amount="99900"> Enterprise
     </label>
   </div>
 </div>
