invitation modal updates

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -55,7 +55,7 @@
         <% if current_user %>
           <%if current_user.client_admin?%>
             <li>
-                <a href="javascript:;"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#inviteModal">Invite</button></a>
+                <a href="javascript:;"><button type="button" class="btn btn-success" data-toggle="modal" data-target="#inviteModal"><i class="fa fa-user-plus"></i> Invite collaborator</button></a>
             </li>
           <%end%>
           <li class="dropdown">
