--- a/app/views/users/send_invite.js.erb
+++ b/app/views/users/send_invite.js.erb
@@ -1,5 +1,5 @@
 <%if @success%>
-  $(".error").html("<p class='success'>You have successfully sent the invitation</p>");
+  $(".error").html("<p class='success'>Invite sent.</p>");
   $("#inviteModal").modal('hide');
   $("#confirmModal").modal('show');
 <%else%>
