--- a/app/views/shared/_confirm_modal.html.erb
+++ b/app/views/shared/_confirm_modal.html.erb
@@ -1,7 +1,9 @@
 <div id="confirmModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <h2>You have successfully sent the invitation!</h2>
+    	<div class="center">
+			<h4>Invite sent. <i class="fa fa-check"></i></h4>
+      	</div>
     </div>
   </div>
 </div>
