--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -52,12 +52,7 @@
           </li>
         <% end %>
 
-<!--         <% if current_user %>
-          <%if current_user.client_admin?%>
-            <li>
-                <a href="javascript:;"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#inviteModal"><i class="fa fa-user-plus"></i> Invite collaborator</button></a>
-            </li>
-          <%end%> -->
+         <% if current_user %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
