--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,9 +17,21 @@
         <li>
           <%= link_to "Marketplace", "/#/marketplace"%>
         </li>
-        <li>
-          <%= link_to "Integrations", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Integrations <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <%= link_to "Mappings", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+              </li>
+              <% unless current_user %>
+                <li>
+                  <%= link_to "Plans", "/#/pricing" %>
+                </li>
+              <% end %>
+            </ul>
         </li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Ideas <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -37,9 +49,6 @@
                 <%= link_to "Developers", "/#/developers"%>
               </li>
             </ul>
-        </li>
-        <li>
-          <%= link_to "Pricing", "/#/pricing" %>
         </li>
       </ul>
 
