--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,17 +29,21 @@
 
     <% if current_user %>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h1><%= @user.plan.name rescue 'No Plan' %></h1>
           <h4>Plan</h4>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h1><%= @user.mappings.enabled.count %> / <%= @user.plan.map_limit rescue 0 %></h1>
           <h4>Maps</h4>
         </div>
-        <div class="col-md-4">
-          <h1>N / <%= @user.plan.job_limit rescue 0 %></h1>
+        <div class="col-md-3">
+          <h1> <%= @user.legacy_count %> / <%= @user.plan.job_limit rescue 0 %></h1>
           <h4>Jobs</h4>
+        </div>
+        <div class="col-md-3">
+          <h1><%= (@user.plan_period_end - Date.today).to_i %></h4>
+          <h4>Days till reset</h4>
         </div>
       </div>
       </br>
