--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
 
   <h1><i class="fa fa-user"></i> your <strong>Account</strong></h1>
-  <h3>Manage credentials and add <strong>credits</strong>.</h3>
+  <h3>Manage credentials and your <strong>plan</strong>.</h3>
 
 <% else %>
 
