--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -163,9 +163,15 @@ b, strong {
   background-image: image-url("noise.png")
 }
 
+.progress {
+  background-color: $off-white;
+  background-image: image-url("noise.png");
+}
+
 .progress-bar-grey {
   background-color: $light-grey;
   background-image: image-url("noise.png");
+  // color: $cream;
   }
 
 // ::-webkit-scrollbar-track
