--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -149,6 +149,11 @@
             <%= f.label :odk_password, "Password" %>
             <%= f.password_field :odk_password, value: f.object.odk_password, class: 'form-control' %>
           </div>
+
+          <div class="form-group">
+            <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.plan.try(:name)%>
+          </div>
+
           <%= f.submit "Update", class: 'btn btn-primary' %>
           <% end %>
           </div>
@@ -222,6 +227,10 @@
             </div>
 
             <div class="form-group">
+              <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.plan.try(:name)%>
+            </div>
+
+            <div class="form-group">
               <%= f.label :sf_host, "Salesforce Org Type" %>
               <br>
               <%= f.select :sf_host, class: 'form-control' do %>
@@ -229,7 +238,8 @@
                   <%= content_tag(:option, c.first, value: c.last) %>
                 <% end %>
               <% end %>
-              </div>
+            </div>
+
             <%= f.submit "Update", class: 'btn btn-primary' %>
             <% end %>
           </div>
